--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>제조사 안내 페이지</title>
-  <style>
+   <style>
     body {
       font-family: 'Noto Sans KR', sans-serif;
       background-color: #f9f9f9;
@@ -62,28 +61,24 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>공식 제조사 안내 페이지</h1>
-    <p class="subtitle">저희는 글로벌 멸균 장비 제조사들의 국내 공식 파트너입니다.</p>
-
-    <div class="intro">
-      멸균기 및 생물안전장비 관련 제품 상담이 필요하시면 언제든지 문의주세요.<br>
-      아래 제조사 로고를 클릭하시면 공식 사이트로 연결됩니다.
-    </div>
-
+   
     <div class="logo-grid">
       <a href="https://sterile.com" target="_blank">
-        <img src="vai.png" alt="VAI">
+        <img src="Veltek_CI.png" alt="VAI">
       </a>
       <a href="https://girton.com" target="_blank">
-        <img src="girton.png" alt="Girton">
+        <img src="Girton_CI.png" alt="Girton">
       </a>
       <a href="https://thoren.com" target="_blank">
-        <img src="thoren.png" alt="Thoren">
+        <img src="Thoren_CI.png" alt="Thoren">
       </a>
       <a href="https://www.innovive.com" target="_blank">
-        <img src="innovive.png" alt="Innovive">
+        <img src="innovive_CI.png" alt="Innovive">
       </a>
+    </div>
+
+   <div class="intro">
+      제조사 로고를 클릭하시면 공식 사이트로 연결됩니다.
     </div>
 
     <div class="contact">
