--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-   <style>
+  <title>LST Partners</title>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
+  <style>
     body {
       font-family: 'Noto Sans KR', sans-serif;
       background-color: #f9f9f9;
@@ -10,49 +12,52 @@
       padding: 0;
       text-align: center;
     }
+
     .container {
       max-width: 900px;
       margin: 0 auto;
       padding: 60px 20px;
     }
+
     h1 {
       color: #222;
       margin-bottom: 10px;
     }
-    .subtitle {
+
+    .message {
       font-size: 1.1em;
-      color: #555;
-      margin-bottom: 40px;
+      color: #333;
+      margin: 40px 0 20px 0;
+      line-height: 1.8;
     }
+
     .logo-grid {
       display: flex;
       justify-content: center;
+      align-items: center;
       flex-wrap: wrap;
       gap: 40px;
       margin: 30px 0 50px 0;
     }
+
     .logo-grid a img {
       max-width: 180px;
       height: auto;
       transition: transform 0.3s ease;
     }
+
     .logo-grid a:hover img {
       transform: scale(1.05);
       opacity: 0.9;
     }
+
     .contact {
       font-size: 1em;
       color: #444;
       line-height: 1.8;
       margin-top: 20px;
     }
-    .intro {
-      background-color: #eee;
-      padding: 20px;
-      margin-bottom: 40px;
-      border-radius: 8px;
-      color: #444;
-    }
+
     footer {
       margin-top: 60px;
       font-size: 0.9em;
@@ -61,24 +66,26 @@
   </style>
 </head>
 <body>
-   
+  <div class="container">
+
     <div class="logo-grid">
       <a href="https://sterile.com" target="_blank">
-        <img src="Veltek_CI.png" alt="VAI">
+        <img src="Veltek_CI.png" alt="Veltek 공식 로고">
       </a>
       <a href="https://girton.com" target="_blank">
-        <img src="Girton_CI.png" alt="Girton">
+        <img src="Girton_CI.png" alt="Girton 공식 로고">
       </a>
       <a href="https://thoren.com" target="_blank">
-        <img src="Thoren_CI.png" alt="Thoren">
+        <img src="Thoren_CI.png" alt="Thoren 공식 로고">
       </a>
       <a href="https://www.innovive.com" target="_blank">
-        <img src="innovive_CI.png" alt="Innovive">
+        <img src="innovive_CI.png" alt="Innovive 공식 로고">
       </a>
     </div>
 
-   <div class="intro">
-      제조사 로고를 클릭하시면 공식 사이트로 연결됩니다.
+    <div class="message">
+      제조사 로고를 클릭하시면 공식 사이트로 연결됩니다.<br>
+      문의사항은 아래 연락처로 문의해주시기 바랍니다.
     </div>
 
     <div class="contact">
@@ -89,6 +96,7 @@
     <footer>
       © 2025 LST Partners. All rights reserved.
     </footer>
+
   </div>
 </body>
 </html>
