--- a/index.html
+++ b/index.html
@@ -19,11 +19,6 @@
       padding: 60px 20px;
     }
 
-    h1 {
-      color: #222;
-      margin-bottom: 10px;
-    }
-
     .message {
       font-size: 1.1em;
       color: #333;
@@ -70,13 +65,13 @@
 
     <div class="logo-grid">
       <a href="https://sterile.com" target="_blank">
-        <img src="Veltek_CI.png" alt="Veltek 공식 로고">
+        <img src="Veltek_CI.png" alt="Veltek 공식 로고" style="transform: scale(1.1);">
       </a>
       <a href="https://girton.com" target="_blank">
-        <img src="Girton_CI.png" alt="Girton 공식 로고">
+        <img src="Girton_CI.png" alt="Girton 공식 로고" style="transform: scale(1.1);">
       </a>
       <a href="https://thoren.com" target="_blank">
-        <img src="Thoren_CI.png" alt="Thoren 공식 로고">
+        <img src="Thoren_CI.png" alt="Thoren 공식 로고" style="transform: scale(0.9);">
       </a>
       <a href="https://www.innovive.com" target="_blank">
         <img src="innovive_CI.png" alt="Innovive 공식 로고">
