--- a/index.html
+++ b/index.html
@@ -35,15 +35,22 @@
       margin: 30px 0 50px 0;
     }
 
-    .logo-grid a img {
+    .logo-img {
       max-width: 180px;
       height: auto;
       transition: transform 0.3s ease;
     }
 
-    .logo-grid a:hover img {
-      transform: scale(1.05);
-      opacity: 0.9;
+    .scale-110 {
+      transform: scale(1.1);
+    }
+
+    .scale-0855 {
+      transform: scale(0.855);
+    }
+
+    .logo-grid a:hover .logo-img {
+      transform: scale(1.05) !important;
     }
 
     .contact {
@@ -65,16 +72,16 @@
 
     <div class="logo-grid">
       <a href="https://sterile.com" target="_blank">
-        <img src="Veltek_CI.png" alt="Veltek 공식 로고" style="transform: scale(1.1);">
+        <img src="Veltek_CI.png" alt="Veltek 공식 로고" class="logo-img scale-110">
       </a>
       <a href="https://girton.com" target="_blank">
-        <img src="Girton_CI.png" alt="Girton 공식 로고" style="transform: scale(1.1);">
+        <img src="Girton_CI.png" alt="Girton 공식 로고" class="logo-img scale-110">
       </a>
       <a href="https://thoren.com" target="_blank">
-        <img src="Thoren_CI.png" alt="Thoren 공식 로고" style="transform: scale(0.855);">
+        <img src="Thoren_CI.png" alt="Thoren 공식 로고" class="logo-img scale-0855">
       </a>
       <a href="https://www.innovive.com" target="_blank">
-        <img src="innovive_CI.png" alt="Innovive 공식 로고">
+        <img src="innovive_CI.png" alt="Innovive 공식 로고" class="logo-img">
       </a>
     </div>
 
