--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
       <a href="https://thoren.com" target="_blank">
         <img src="Thoren_CI.png" alt="Thoren 공식 로고" class="logo-img size-small">
       </a>
+      <a href="https://globepharma.com" target="_blank">
+        <img src="Globe_Pharma_CI.png" alt="GlobePharma 공식 로고" class="logo-img size-small">
+      </a>
+      <a href="https://www.bullard.com" target="_blank">
+        <img src="Bullard_CI.png" alt="Bullard 공식 로고" class="logo-img size-small">
+      </a>
     </div>
 
     <div class="message">
