--- a/index.html
+++ b/index.html
@@ -28,28 +28,18 @@
 
     .logo-grid {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
+      flex-wrap: nowrap;
+      overflow-x: auto;
+      justify-content: flex-start;
       gap: 40px;
-      margin: 30px 0 50px 0;
+      padding-bottom: 10px;
+      -webkit-overflow-scrolling: touch;
     }
 
     .logo-img {
-      height: auto;
+      height: 80px;
+      flex-shrink: 0;
       transition: transform 0.3s ease;
-    }
-
-    .size-large {
-      width: 198px; /* +10% */
-    }
-
-    .size-small {
-      width: 153px; /* -15% (10% + 추가 5%) */
-    }
-
-    .size-default {
-      width: 180px;
     }
 
     .logo-grid a:hover .logo-img {
@@ -75,19 +65,19 @@
 
     <div class="logo-grid">
       <a href="https://sterile.com" target="_blank">
-        <img src="Veltek_CI.png" alt="Veltek 공식 로고" class="logo-img size-large">
+        <img src="Veltek_CI.png" alt="Veltek 사의 공식 로고" class="logo-img" loading="lazy">
       </a>
       <a href="https://girton.com" target="_blank">
-        <img src="Girton_CI.png" alt="Girton 공식 로고" class="logo-img size-large">
+        <img src="Girton_CI.png" alt="Girton 사의 공식 로고" class="logo-img" loading="lazy">
       </a>
       <a href="https://thoren.com" target="_blank">
-        <img src="Thoren_CI.png" alt="Thoren 공식 로고" class="logo-img size-small">
+        <img src="Thoren_CI.png" alt="Thoren 사의 공식 로고" class="logo-img" loading="lazy">
       </a>
       <a href="https://globepharma.com" target="_blank">
-        <img src="Globe_Pharma_CI.png" alt="GlobePharma 공식 로고" class="logo-img size-small">
+        <img src="Globe_Pharma_CI.png" alt="GlobePharma 사의 공식 로고" class="logo-img" loading="lazy">
       </a>
       <a href="https://www.bullard.com" target="_blank">
-        <img src="Bullard_CI.png" alt="Bullard 공식 로고" class="logo-img size-small">
+        <img src="Bullard_CI.png" alt="Bullard 사의 공식 로고" class="logo-img" loading="lazy">
       </a>
     </div>
 
