--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <a href="https://globepharma.com" target="_blank">
         <img src="Globe_Pharma_CI.png" alt="GlobePharma 사의 공식 로고" class="logo-img" loading="lazy">
       </a>
-      <a href="https://www.bullard.com" target="_blank">
+      <a href="https://apac.bullard.com" target="_blank">
         <img src="Bullard_CI.png" alt="Bullard 사의 공식 로고" class="logo-img" loading="lazy">
       </a>
     </div>
