--- a/index.html
+++ b/index.html
@@ -64,21 +64,9 @@
   <div class="container">
 
     <div class="logo-grid">
-      <a href="https://sterile.com" target="_blank">
-        <img src="Veltek_CI.png" alt="Veltek 사의 공식 로고" class="logo-img" loading="lazy">
-      </a>
-      <a href="https://girton.com" target="_blank">
-        <img src="Girton_CI.png" alt="Girton 사의 공식 로고" class="logo-img" loading="lazy">
-      </a>
-      <a href="https://thoren.com" target="_blank">
-        <img src="Thoren_CI.png" alt="Thoren 사의 공식 로고" class="logo-img" loading="lazy">
-      </a>
-      <a href="https://globepharma.com" target="_blank">
-        <img src="Globe_Pharma_CI.png" alt="GlobePharma 사의 공식 로고" class="logo-img" loading="lazy">
-      </a>
-      <a href="https://apac.bullard.com" target="_blank">
-        <img src="Bullard_CI.png" alt="Bullard 사의 공식 로고" class="logo-img" loading="lazy">
-      </a>
+      <a href="https://www.innovive.com" target="_blank">
+        <img src="innovive_CI.png" alt="Innovive 사의 공식 로고" class="logo-img" loading="lazy">
+      </a>      
     </div>
 
     <div class="message">
