--- a/index.html
+++ b/index.html
@@ -19,31 +19,29 @@
       padding: 60px 20px;
     }
 
-    .message {
-      font-size: 1.1em;
-      color: #333;
-      margin: 40px 0 20px 0;
-      line-height: 1.8;
-    }
-
     .logo-grid {
       display: flex;
-      flex-wrap: nowrap;
-      overflow-x: auto;
-      justify-content: flex-start;
-      gap: 40px;
-      padding-bottom: 10px;
-      -webkit-overflow-scrolling: touch;
+      justify-content: center; /* 이미지 가운데 정렬 */
+      padding: 20px 0;
     }
 
     .logo-img {
-      height: 80px;
-      flex-shrink: 0;
+      width: auto;
+      height: auto;
+      max-width: 100%;
+      max-height: 100%;
       transition: transform 0.3s ease;
     }
 
     .logo-grid a:hover .logo-img {
       transform: scale(1.05);
+    }
+
+    .message {
+      font-size: 1.1em;
+      color: #333;
+      margin: 40px 0 20px 0;
+      line-height: 1.8;
     }
 
     .contact {
