--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
 
     .logo-grid {
       display: flex;
-      justify-content: center; /* 이미지 가운데 정렬 */
+      justify-content: center;
       padding: 20px 0;
     }
 
     .logo-img {
-      width: auto;
-      height: auto;
-      max-width: 100%;
-      max-height: 100%;
+      width: 200px;         /* ✅ 적당한 고정 너비 */
+      max-width: 100%;       /* ✅ 화면 넘치지 않도록 제한 */
+      height: auto;          /* ✅ 비율 유지 */
       transition: transform 0.3s ease;
     }
 
