--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
     }
 
     .logo-img {
-      width: 200px;         /* ✅ 적당한 고정 너비 */
-      max-width: 100%;       /* ✅ 화면 넘치지 않도록 제한 */
-      height: auto;          /* ✅ 비율 유지 */
+      width: 100px;           /* ✅ 50% 축소된 크기 */
+      height: auto;
+      display: block;
+      margin: 20px auto;      /* ✅ 위아래 20px 여백 + 가운데 정렬 */
       transition: transform 0.3s ease;
     }
 
