--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     }
 
     .logo-img {
-      width: 100px;           /* ✅ 50% 축소된 크기 */
+      width: 160px;           /* ✅ 보기 좋은 적당한 크기 */
       height: auto;
       display: block;
-      margin: 20px auto;      /* ✅ 위아래 20px 여백 + 가운데 정렬 */
+      margin: 40px auto;      /* ✅ 충분한 위아래 여백 */
       transition: transform 0.3s ease;
     }
 
