--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     }
 
     .logo-img {
-      width: 160px;           /* ✅ 보기 좋은 적당한 크기 */
+      width: 200px;           /* ✅ 적당한 로고 크기 */
       height: auto;
       display: block;
-      margin: 40px auto;      /* ✅ 충분한 위아래 여백 */
+      margin: 40px auto;      /* ✅ 여유 있는 여백 */
       transition: transform 0.3s ease;
     }
 
